# AGENT33-PUBLIC

./: .dockerignore  .gitignore  .trivyignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  install.ps1  install.sh  smoke.config.json
engine/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.agent-os  Dockerfile.airllm  Dockerfile.devbox  Makefile  README.md  alembic.ini  docker-compose.multi.yml  docker-compose.prod.yml  docker-compose.shared-ollama.yml  docker-compose.yml  fix_llama.ps1  hatch_build.py  nginx-multi.conf  pyproject.toml  runtime_compatibility.lock.json  test_httpx.py  test_moe_connection.py  test_moe_tps.py  test_phase_34.py
engine/agent-definitions/: architect.json  browser-agent.json  documentation.json  reviewer.json  security.json  test-engineer.json
engine/alembic/: env.py
engine/alembic/versions/: 001_initial.py  002_embedding_dim_hnsw.py  003_adr_review_state.py  004_adr_evaluation_state.py  005_adr_autonomy_state.py  006_adr_release_state.py  007_adr_improvement_state.py  008_adr_skill_registry_state.py
engine/docker/: agent-os-entrypoint.sh  agent33-health  agent33-token  agent33-tools
engine/docs/: agent-guide.md  api-reference.md  architecture.md  cli-reference.md  contributing.md  feature-roadmap.md  getting-started.md  integration-guide.md  orchestration-mapping.md  run-history-authority.md  runtime-architecture-map.md  runtime-compatibility.md  security-guide.md  state-roots.md  use-cases.md  workflow-guide.md
engine/examples/plugins/word_count/: plugin.yaml
engine/packs/code-review/: PACK.yaml  README.md
engine/packs/developer-assistant/: PACK.yaml  README.md
engine/packs/document-summarizer/: PACK.yaml  README.md
engine/packs/hive-family/: PACK.yaml
engine/packs/meeting-notes/: PACK.yaml  README.md
engine/packs/official-outcome-packs/: PACK.yaml
engine/packs/official-outcome-packs/outcomes/: competitor-research-brief.yaml  founder-mvp-builder.yaml  release-readiness-checklist.yaml  repository-security-review.yaml  test-generation-sprint.yaml
engine/packs/official-outcome-packs/workflows/: competitor-research-brief.yaml  founder-mvp-builder.yaml  release-readiness-checklist.yaml  repository-security-review.yaml  test-generation-sprint.yaml
engine/packs/platform-builder/: PACK.yaml
engine/packs/web-research/: PACK.yaml  README.md
engine/packs/workflow-ops/: PACK.yaml
engine/runtime_compatibility_snapshots/: ollama-chat-api.md  openai-chat-completions.json
engine/scripts/: check_import_boundaries.py  check_runtime_compatibility.py  download_model.py
engine/src/agent33/: __init__.py  config.py  config_apply.py  config_profiles.py  config_schema.py  main.py  phase23_lifecycle.py  state_paths.py
engine/src/agent33/agents/: __init__.py  capabilities.py  capability_packs.py  context_manager.py  context_window.py  definition.py  delegation.py  effort.py  events.py  isc.py  profiling.py  reasoning.py  registry.py  runtime.py  stuck_detector.py  title_generator.py  tokenizer.py  (+4 more)
engine/templates/: dashboard.html
engine/templates/explanations/: diff-review.html  plan-review.html  project-recap.html
engine/tests/: conftest.py  test_aep6_remediations.py  test_agent_archetypes.py  test_agent_builder_api.py  test_agent_harness.py  test_agent_os_readiness.py  test_agent_profiling.py  test_agent_registry.py  test_airllm_provider.py  test_alembic_migration_chain.py  test_alembic_rolling_deploy.py  test_apply_patch_tool.py  test_architecture_gaps.py  test_artifacts_and_retry.py  test_auth_bootstrap.py  test_auth_repository.py  test_automation_filters.py  test_autonomy_levels.py  test_awm_tier1.py  test_background_refresh.py  test_backup_manifest.py  test_backup_routes.py  test_backup_service.py  test_bench_cli.py  test_benchmark_contracts.py  test_benchmark_harness.py  test_bm25_warmup_ingestion.py  test_bootstrap.py  test_browser_computer_use_gate.py  test_browser_safety.py  test_browser_vision.py  test_capabilities.py  test_capability_packs.py  test_channel_health.py  test_chat.py  test_checkpoint_wiring.py  test_cli_main.py  test_collaboration_modes.py  test_comparative_bundle_evaluation.py  test_comparative_comparator.py  (+364 more)
engine/tests/benchmarks/: test_dag_performance.py  test_skills_smoke.py
engine/tests/e2e/: __init__.py  conftest.py  test_agent_tool_memory_flow.py  test_hook_chain.py  test_multi_tenant_isolation.py  test_session_lifecycle.py  test_workflow_agent_bridge.py
engine/tests/integration/: test_workflow_execution.py
engine/tool-definitions/: apply_patch.yml  browser.yml  file_ops.yml  reader.yml  search.yml  shell.yml  web_fetch.yml
(+1425 files in other folders)
